# neural-network

./: .gitignore  CMakeLists.txt  README.md
src/: Layer.cpp  Layer.h  Model.cpp  Model.h
src/main/: HiddenLayer.h  InputLayer.h  Layer.cpp  Layer.h  Model.cpp  Model.h
src/test/: layerTest.cpp  modelTest.cpp  test_helpers.h
